style.css
/* Quicksand font */
@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500');


*{
    box-sizing: border-box;
}


body{
    margin:0;
}

/* common css styles */
.section-heading {
    font-family: 'Quicksand', sans-serif;
    margin:1.5rem auto;
    color:#ffc403;
    font-size: 4rem;
    font-weight: 400;
}

.section-divider-line {
    width: 85%;
    height: 2px;
    background:#FFC403;
    margin: 1.5rem auto 2.5rem;
}

/* Navbar */
#menubar, #menubar .navbar {
    background-color: #fff;
    padding: 0 1rem;
}

#menubar .navbar-nav {
    padding-right: 2.5rem;
}

#menubar ul li {
    padding: 0 1rem;
    margin: 0 0.5rem;
    font-family: Quicksand;
    font-weight: 500;
    letter-spacing: 0.05em;
    border-radius: 5px;
}

#menubar ul li a {
    color: #282828;
}

#menubar ul li:hover, #menubar ul li:hover a {
    background: #FFC403;
    color: #fff;
    transition: all ease 0.1s;
    /* border-top: 2px solid #FFC403;
    border-bottom: 2px solid #FFC403; */
}

#menubar ul li.always-active {
    background: #FFC403;
    border-radius: 5px;
}

#menubar ul li.always-active a {
    color: #FFFFFF !important;
}

#carouselExampleSlidesOnly .overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 2;
    background-color: #080d15;
    opacity: .4;
}

#carouselExampleSlidesOnly .carousel-caption {
    left: 10%;
    right: 10%;
    top: 40%;
    font-family: Quicksand;
    line-height: normal;
    letter-spacing: 0.05em;
}

#carouselExampleSlidesOnly .carousel-caption h3 {
    font-weight: normal;
    font-size: 2.2rem;
}

#carouselExampleSlidesOnly .carousel-caption h2 {
    color: #FFC403;
    font-weight: bold;
    font-size: 2.5rem;
}


/* "Who we are and Why nothing hold us down" Section styles */
.who_we_are-section, .why_nothing_hold_us_down-section {
    padding: 1.5rem 0;
    text-align: center;
}

.who_we_are-section p, .why_nothing_hold_us_down-section p {
    width: 85%;
    margin: 2rem auto;
    font-family: Quicksand;
    font-size: 1.4rem;
    line-height: normal;
    letter-spacing: 0.05em;
    color: #282828;
}

/* "How we work section" styles */
.how_we_work-section {
    padding: 20px 0;
    text-align: center;
}

.how_we_work-section .row {
    padding-top: 3rem;
    font-family: Quicksand;
    font-size: 1.3rem;
    color: #000000;
    font-weight: 500;
}

/* combined styles for funded & help sections */
.funded-section,
.help-section{
    height:100vh;
    padding: 30px 50px;
    text-align: center;
    background:linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url('Assets/2t6b5242-crop-u20715.jpg') center/cover no-repeat;
}

.funded-section__heading,
.help-section__heading{
    font-family: 'Quicksand', sans-serif;
    margin:1.5rem auto;
    color:#ffc403;
    font-size:3.5rem;
    font-weight: 400;

}

.funded-section__content,
.help-section__content{
    font-size: 1.5rem;
    line-height: 1;
    letter-spacing: 1.2px;
    color: white;
    word-spacing: 2.3px;
    font-family: Arial, Helvetica, sans-serif;
}

.funded-section__btn,
.help-section__btn{
    display:block;
    border-radius: 5px;
    margin:3rem auto;
    background-color:#ffc403;
    color: black;
    padding: 0.5rem 1rem;
    text-decoration: none;
    width:300px;
    font-size: 1.8rem;
    box-shadow: inset 0px 4px 2px rgba(0, 0, 0, 0.2);
}



/* some specific funded section styles */
.funded-section__content:nth-of-type(1){
    margin:5rem auto 0.5rem;
}


.funded-section__content:nth-of-type(2){
    margin:0.5rem auto;
}

.funded-section__content:nth-of-type(3){
    margin:6rem auto;
    font-weight: bold;
}



/* some specific help section styles */
.help-section{
    background:linear-gradient(to bottom,rgba(0,0,0,0.54),rgba(0,0,0,0.54)), url('Assets/2t6b0409.jpg') center/cover no-repeat;
}

.help-section__content{
    margin:2rem auto;
}

.help-section__btn{
    margin:3.5rem auto;
}

.video-section {
    text-align: center;
    margin: 5rem 0;
}

.video-section iframe {
    width: 75%;
    height: 580px;
}

.video-section h2 {
    color: #FFC403;
    font-family: Quicksand;
    font-weight: normal;
    font-size: 2.7rem;
    margin-top: 1.5rem;
}


/* Contact Us */
.contact-section {
    padding: 20px 50px;
    background:linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url('Assets/contact-us-bg.jpg') center/cover no-repeat;
    font-size: 1.7rem
}

.contact-section .section-heading {
    text-align: center;
    margin-bottom: 40px
}

.contact-section form {
    border-right: 2px solid #ffc403;
    color: #ffc403;
    padding-right: 100px;
}

.contact-section form input {
    font-size: 1.7rem;
    padding: 10px
}

.contact-section .btn {
    background: #ffc403;
    color: #fff;
    font-size: 1.7rem;
    width: 100%
}

.contact-section form h3 {
    color: #fff;
    font-size: 3rem;
    padding: 20px 0;
}

.contact-section .social-links a {
    color: #fff;
    display: flex;
    padding: 25px 0;
}

.contact-section .social-links a:hover {
    text-decoration: none;
}

.contact-section .social-links .fa {
    color: #ffc403;
    font-size: 3.5rem;
    text-align: center;
    width: 150px;
}

.contact-section .social-links span {
    padding: 8px 0;
}




/* === MEDIA QUERIES === */

@media only screen and (max-width: 768px) {
    .contact-section form {
        border-bottom: 2px solid #ffc403;
        border-right: 0;
        padding-right: 0;
    }
}
  
@media only screen and (max-width: 414px) {
    .contact-section {
        padding: 20px;
    }

    .contact-section .social-links .fa {
        font-size: 2rem;
        width: 70px;
    }

    .contact-section .social-links span {
        font-size: 1.4rem;
        padding: 0;
    }
}

